--- a/devices/common/.config
+++ b/devices/common/.config
@@ -11,20 +11,32 @@ CONFIG_IPV6=y
 
 # Applications
 
+CONFIG_PACKAGE_luci-app-dnsfilter=n
 CONFIG_PACKAGE_luci-app-advanced=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-gpsysupgrade=y
+CONFIG_PACKAGE_luci-app-gpsysupgrade=n
 CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-app-bypass=y
+CONFIG_PACKAGE_luci-app-bypass=n
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
-CONFIG_PACKAGE_luci-app-nft-qos=y
+CONFIG_PACKAGE_luci-app-nft-qos=n
 CONFIG_PACKAGE_luci-app-wizard=y
+
+# 定制需打包要的软件
+CONFIG_PACKAGE_luci-app-frpc=n
+CONFIG_PACKAGE_luci-app-nps=y
+CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-poweroff=y
+CONFIG_PACKAGE_luci-app-qos=y
+CONFIG_PACKAGE_luci-app-samba4=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+CONFIG_PACKAGE_luci-app-wol=y
 
 # Themes
 
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-edge=y
+CONFIG_PACKAGE_luci-theme-argon=y
 
 
 # 其他需要安装的软件包:
@@ -42,10 +54,10 @@ CONFIG_PACKAGE_luci-mod-rpc=y
 CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_luci-lib-fs=y
 CONFIG_PACKAGE_luci-proto-relay=y
-CONFIG_PACKAGE_luci-app-turboacc=y
+CONFIG_PACKAGE_luci-app-turboacc=n
 CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=y
-CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
+CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE=n
+CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=n
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSFORWARDER=n
 CONFIG_PACKAGE_TURBOACC_INCLUDE_DNSPROXY=n
 CONFIG_LUCI_LANG_zh_Hans=y
@@ -55,7 +67,7 @@ CONFIG_DEVEL=y
 CONFIG_CCACHE=y
 CONFIG_COREMARK_OPTIMIZE_O3=y
 CONFIG_COREMARK_ENABLE_MULTITHREADING=y
-CONFIG_COREMARK_NUMBER_OF_THREADS=16
+CONFIG_COREMARK_NUMBER_OF_THREADS=4
 CONFIG_PACKAGE_zoneinfo-asia=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_wget-ssl=y
@@ -63,10 +75,10 @@ CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
-CONFIG_XRAY_PROVIDE_V2RAY=y
+CONFIG_XRAY_PROVIDE_V2RAY=n
 CONFIG_V2RAY_COMPRESS_UPX=n
 CONFIG_XRAY_COMPRESS_UPX=n
-CONFIG_PACKAGE_zram-swap=y
+CONFIG_PACKAGE_zram-swap=n
 CONFIG_NODEJS_14=y
 
 CONFIG_BUSYBOX_CUSTOM=y
