--- a/devices/common/.config
+++ b/devices/common/.config
@@ -17,18 +17,29 @@ CONFIG_IPV6=y
 
 CONFIG_PACKAGE_luci-app-advanced=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-gpsysupgrade=y
+CONFIG_PACKAGE_luci-app-gpsysupgrade=n
 CONFIG_PACKAGE_luci-app-opkg=y
-CONFIG_PACKAGE_luci-app-bypass=y
+CONFIG_PACKAGE_luci-app-bypass=n
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-wizard=y
 CONFIG_PACKAGE_luci-app-ksmbd=y
 
+# 定制需打包要的软件
+CONFIG_PACKAGE_luci-app-frpc=n
+CONFIG_PACKAGE_luci-app-nps=n
+CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-poweroff=y
+CONFIG_PACKAGE_luci-app-qos=y
+CONFIG_PACKAGE_luci-app-samba4=n
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+CONFIG_PACKAGE_luci-app-wol=y
+
 # Themes
 
 CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-edge=y
+CONFIG_PACKAGE_luci-theme-edge=n
 CONFIG_PACKAGE_luci-theme-argon=y
 
 
@@ -63,10 +74,10 @@ CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
-CONFIG_XRAY_PROVIDE_V2RAY=y
+CONFIG_XRAY_PROVIDE_V2RAY=n
 CONFIG_V2RAY_CORE_COMPRESS_UPX=n
 CONFIG_XRAY_CORE_COMPRESS_UPX=n
-CONFIG_PACKAGE_zram-swap=y
+CONFIG_PACKAGE_zram-swap=n
 CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_lz4=y
 CONFIG_PACKAGE_kmod-lib-lz4=y
