--- a/devices/x86_64/.config
+++ b/devices/x86_64/.config
@@ -5,7 +5,7 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 
 # EFI支持:
-CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_IMAGES=n
 CONFIG_EFI_IMAGES=y
 CONFIG_VMDK_IMAGES=n
 
