--- a/devices/common/.config
+++ b/devices/common/.config
@@ -10,9 +10,10 @@ CONFIG_SIGNATURE_CHECK=n
 CONFIG_TESTING_KERNEL=y
 
 # 设置固件大小:
+CONFIG_TARGET_KERNEL_PARTSIZE=128
 CONFIG_TARGET_ROOTFS_PARTSIZE=2004
 
-CONFIG_ALL_KMODS=y
+CONFIG_ALL_KMODS=n
 CONFIG_PACKAGE_kmod-ipt-coova=n
 CONFIG_PACKAGE_kmod-usb-serial-xr_usb_serial_common=n
 
@@ -42,7 +43,7 @@ CONFIG_PACKAGE_luci-app-attendedsysupgrade=n
 
 # 定制需打包要的软件
 CONFIG_PACKAGE_luci-app-frpc=n
-CONFIG_PACKAGE_luci-app-nps=n
+CONFIG_PACKAGE_luci-app-npc=n
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-poweroff=y
 CONFIG_PACKAGE_luci-app-qos=y
