--- a/devices/common/.config
+++ b/devices/common/.config
@@ -98,6 +98,7 @@ CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM=y
 
 CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-inet-diag=y
 
 CONFIG_BUSYBOX_CUSTOM=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_XARGS_SUPPORT_REPL_STR=y
